# CipherMQ

./: CLA.md  Cargo.toml  LICENSE  README.md  config.toml  generate_certs.py
.github/: pull_request.md
Benchmarks/: benchmark_report.md
benchmarks/: benchmark_report.md
client/: Sender.py
clients/Receiver_1/: Cargo.toml  config.json
clients/Receiver_1/src/: main.rs
clients/Sender_1/: Cargo.toml  config.json
clients/Sender_1/src/: main.rs
create_ca_key/Rust_CA_Maker_ECDSA_P-384_Multi_Client/: Cargo.toml
create_ca_key/Rust_CA_Maker_ECDSA_P-384_Multi_Client/src/: main.rs
create_ca_key/Rust_Key_Maker_X25519/: Cargo.toml
create_ca_key/Rust_Key_Maker_X25519/src/: main.rs
docs/: Project_Architecture.markdown  Project_Architecture.md  architecture.md
docs/diagrams/: Component_diagram.puml  Sequence_diagram.puml  Sequence_iagram.puml
results/System_1/: performance.markdown
results/System_2/: performance.markdown
server/: Cargo.toml
server/src/: main.rs
server/src/broker/: engine.rs  mod.rs
server/src/core/: exchange.rs  message.rs  mod.rs  queue.rs  state.rs
server/src/networking/: client_handler.rs  mod.rs  protocol_parser.rs
src/: auth.rs  config.rs  connection.rs  main.rs  server.rs  state.rs  storage.rs
src/client/: RSA.py  Receiver.py  Sender.py  Sim_send_100000_records.py  WebSocket.py  config.json  key_maker.py  received_messages.json  received_messages.jsonl  receiver_private.pem  receiver_public.pem
src/client/Receiver_1/: Receiver.py  config.json
src/client/Sender_1/: Sender.py  config.json
src/client/receiver/: Receiver.py  config.json
src/client/sender/: Sender.py  config.json
