[package]
name = "ciphermq"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
uuid = { version = "1.10", features = ["v4"] }
thiserror = "2.0.12"
rusqlite = { version = "0.36.0", features = ["bundled"] }
chrono = "0.4"