[package]
name = "ciphermq"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dashmap = "6.1.0"
uuid = { version = "1.10", features = ["v4"] }
thiserror = "2.0.12"
chrono = "0.4"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "ring", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2.2.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
toml = "0.8.19"

