[package]
name = "ciphermq"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
dashmap = "6.1.0"
uuid = { version = "1.10", features = ["v4"] }
thiserror = "2.0.12"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2.2.0"
async-trait = "0.1"
toml = "0.8.19"
rusqlite = { version = "0.37.0", features = ["bundled"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
x509-parser = "0.16"
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"