[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sender"
path = "src/main.rs"

[dependencies]
tokio         = { version = "1", features = ["full"] }
tokio-rustls  = "0.26"
rustls        = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
x25519-dalek     = { version = "2", features = ["static_secrets"] }
blake2           = "0.10"
xsalsa20poly1305 = "0.9"
chacha20poly1305 = "0.10"
base64        = "0.22"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
x509-parser   = "0.16"
uuid          = { version = "1", features = ["v4"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
anyhow  = "1"
chrono  = { version = "0.4", features = ["serde"] }
rand    = "0.8"

[profile.release]
opt-level = 3
lto       = true